Index-only plan step 3: Top-down Select and Join transformation rule
 - Converted IntroduceSelectAccessMethodRule and IntroduceJoinAccessMethodRule
   from bottom-up approach to top-down approach from the root operator.
 - Index-only plan needs to verify the variables that are live in the select or join condition
   are the only variables to be used afterwards unless a variable is generated after the select or join operator.
 - In order to keep this information, top-down approach needs to be introduced.

Change-Id: I60a2a61eb46851d4c16c8f17447e3ac9b0aca778
Reviewed-on: https://asterix-gerrit.ics.uci.edu/1551
Tested-by: Jenkins <jenkins@fulliautomatix.ics.uci.edu>
BAD: Jenkins <jenkins@fulliautomatix.ics.uci.edu>
Integration-Tests: Jenkins <jenkins@fulliautomatix.ics.uci.edu>
Reviewed-by: Yingyi Bu <buyingyi@gmail.com>